# odd-jobbed_rankings

./: .gitignore  .markdownlint.json  Cargo.toml  README.md  chars.json  guild_check.py  update-async.py  update.py
src/: main.rs
