[package]
name = "update_rankings"
version = "0.1.0"
authors = ["deer <capreolina@protonmail.ch>"]
edition = "2021"
license = "CC0-1.0"

[dependencies]
anyhow = "1.0.62"
futures = "0.3.23"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["json", "rustls-tls"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
strip = true
